# discovery-piscine-coding-with-python-Kawaiiow

./: pyproject.toml
.github/workflows/: auto_grader.yml
cell02/ex00/: iszero.py
cell03/ex00/: to25.py
cell05/ex00/: create_array.py
cell05/ex01/: play_with_arrays.py
cell05/ex02/: play_with_arrays.py
tests/: conftest.py  test_cell00ex01.py  test_cell00ex02.py  test_cell01ex00.py  test_cell01ex01.py  test_cell01ex02.py  test_cell01ex03.py  test_cell02ex00.py  test_cell02ex01.py  test_cell02ex02.py  test_cell02ex03.py  test_cell03ex00.py  test_cell03ex01.py  test_cell03ex02.py  test_cell03ex03.py  test_cell04ex00.py  test_cell04ex01.py  test_cell04ex02.py  test_cell04ex03.py  test_cell04ex04.py  test_cell04ex05.py  test_cell05ex00.py  test_cell05ex01.py  test_cell05ex02.py
